Bug 100558 - Spin button for changing day/month/year in date form control doesn't set right hand digits
Summary: Spin button for changing day/month/year in date form control doesn't set righ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.1.6 target:5.2.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-06-23 07:54 UTC by Bill
Modified: 2016-10-25 18:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Base database file showing Spin facility not working on date field (12.27 KB, application/vnd.sun.xml.base)
2016-06-24 08:09 UTC, Bill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bill 2016-06-23 07:54:03 UTC
The increment or decrement function does not operate on the figure on the far right of the date field - i.e DD/MM/YYYY no change occurs to YYYY. If date format changed to YYYY/MM/DD then DD will not allow the figure to be incremented or decremented.
Comment 1 Alex Thurgood 2016-06-23 15:54:03 UTC
@Bill : more information please, which part of Base are you talking about ? I assume it is a form control that is causing you a problem.

Please provide detailed instructions for reproducing, and preferably a test ODB file.
Comment 2 Alex Thurgood 2016-06-23 15:54:55 UTC
@Bill : you also need to mention the version of LibreOffice you are using, OS and whether 64 or 32bit.
Comment 3 Bill 2016-06-24 08:09:53 UTC
Created attachment 125876 [details]
Base database file showing Spin facility not working on date field

OS Linux Mint 17.3
Dell Inspiron laptop i5 (64)
LibreOffice 5.1.2.2


Older Dell Desktop (32)
LibreOffice 5.1.4

Whether the database is set up using MYSql Workbench 6.00 (Community Edition) or a new database is set up within Base, the problem is the same.

By right-clicking the form to enter the edit mode, then using the Ctrl button and selecting only the field, followed by a right click to select the 
Control function to open the Properties: Date Field window, the spin button is set to YES.

Note: If the date format is changed, it is the last figure in the sequence AA/BB/CC (CC) that is affected - it does not matter if CC holds the day or year - 
the spin buttons do not cause CC to change incrementally or otherwise.

This bug is constantly reproduced each time.

As a reference please refer to the video by TheFrugalComputerGuy tutorial video LibreOffice Base (12) Dates and Dollar Signs.mp4 which shows that the day, month and year can be changed by using the spin buttons
Comment 4 Bill 2016-06-24 08:11:24 UTC
Comment on attachment 125876 [details]
Base database file showing Spin facility not working on date field

OS Linux Mint 17.3
Dell Inspiron laptop i5 (64)
LibreOffice 5.1.2.2


Older Dell Desktop (32)
LibreOffice 5.1.4

Whether the database is set up using MYSql Workbench 6.00 (Community Edition) or a new database is set up within Base, the problem is the same.

By right-clicking the form to enter the edit mode, then using the Ctrl button and selecting only the field, followed by a right click to select the 
Control function to open the Properties: Date Field window, the spin button is set to YES.

Note: If the date format is changed, it is the last figure in the sequence AA/BB/CC (CC) that is affected - it does not matter if CC holds the day or year - 
the spin buttons do not cause CC to change incrementally or otherwise.

This bug is constantly reproduced each time.

As a reference please refer to the video by TheFrugalComputerGuy tutorial video LibreOffice Base (12) Dates and Dollar Signs.mp4 which shows that the day, month and year can be changed by using the spin buttons
Comment 5 Bill 2016-06-24 08:11:42 UTC
OS Linux Mint 17.3
Dell Inspiron laptop i5 (64)
LibreOffice 5.1.2.2


Older Dell Desktop (32)
LibreOffice 5.1.4

Whether the database is set up using MYSql Workbench 6.00 (Community Edition) or a new database is set up within Base, the problem is the same.

By right-clicking the form to enter the edit mode, then using the Ctrl button and selecting only the field, followed by a right click to select the 
Control function to open the Properties: Date Field window, the spin button is set to YES.

Note: If the date format is changed, it is the last figure in the sequence AA/BB/CC (CC) that is affected - it does not matter if CC holds the day or year - 
the spin buttons do not cause CC to change incrementally or otherwise.

This bug is constantly reproduced each time.

As a reference please refer to the video by TheFrugalComputerGuy tutorial video LibreOffice Base (12) Dates and Dollar Signs.mp4 which shows that the day, month and year can be changed by using the spin buttons
Comment 6 Bill 2016-06-24 08:12:04 UTC
Comment on attachment 125876 [details]
Base database file showing Spin facility not working on date field

OS Linux Mint 17.3
Dell Inspiron laptop i5 (64)
LibreOffice 5.1.2.2


Older Dell Desktop (32)
LibreOffice 5.1.4

Whether the database is set up using MYSql Workbench 6.00 (Community Edition) or a new database is set up within Base, the problem is the same.

By right-clicking the form to enter the edit mode, then using the Ctrl button and selecting only the field, followed by a right click to select the 
Control function to open the Properties: Date Field window, the spin button is set to YES.

Note: If the date format is changed, it is the last figure in the sequence AA/BB/CC (CC) that is affected - it does not matter if CC holds the day or year - 
the spin buttons do not cause CC to change incrementally or otherwise.

This bug is constantly reproduced each time.

As a reference please refer to the video by TheFrugalComputerGuy tutorial video LibreOffice Base (12) Dates and Dollar Signs.mp4 which shows that the day, month and year can be changed by using the spin buttons
Comment 7 Alex Thurgood 2016-06-24 12:30:03 UTC
Confirming on

Version: 5.3.0.0.alpha0+
Build ID: 937877c8272db015948d196e539976182fc34937
Threads CPU : 2; Version de l'OS :Mac OS X 10.11.5; UI Render : par défaut; 
Locale : fr-FR (fr.UTF-8)

with provided test file
Comment 8 Alex Thurgood 2016-06-24 12:30:50 UTC
Thanks Bill
Comment 9 Alex Thurgood 2016-06-24 12:35:25 UTC
Sounds similar to bug 97064
Comment 10 Lionel Elie Mamane 2016-06-24 14:21:14 UTC
If it worked for the video, it means it worked in an older version. It would be nice to know which one(s), and even better bibisect the regression.
Comment 11 Lionel Elie Mamane 2016-06-24 14:24:52 UTC
For full clarity:

Entering date 31/12/17 and then putting the cursor between the "3" and "1" of 31 and using the spin button successfully goes to "1/1/18". However, putting the cursor between "1" and "7" of "17" and then using the spin button has no effect. By contrast, putting the cursor between "1" and "2" of "12" and using the spin button correctly increases/decreases the month.
Comment 12 Alex Thurgood 2016-06-24 14:47:14 UTC
Bug already present in 

Version: 4.1.4.2
Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72
Comment 13 Alex Thurgood 2016-06-24 14:50:15 UTC
Bug not present in 

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

in this version, I can set the year digits by setting the cursor on the right hand side of the date separator and clicking on the spin button.

==> regression
Comment 14 Alex Thurgood 2016-06-24 14:53:39 UTC
Bug not present in

LibreOffice 3.4.2 
OOO340m1 (Build:203)
Comment 15 Alex Thurgood 2016-06-24 14:58:56 UTC
Bug not present in

LibreOffice 3.5.2.2 
Build ID: 281b639-6baa1d3-ef66a77-d866f25-f36d45f
Comment 16 Alex Thurgood 2016-06-24 15:06:00 UTC
Bug not present in 

Version 3.6.3.2 (Build ID: 58f22d5)
Comment 17 Lionel Elie Mamane 2016-06-24 15:21:40 UTC
Hmm.. Might be linked to the UNO date struct changes in 4.1... In this case, the bug will have been first introduced in 4.1.0.alpha by https://cgit.freedesktop.org/libreoffice/core/commit/?id=dd780228cca25dc818ca7fdb628ff607c109618e or thereabouts.
Comment 18 Alex Thurgood 2016-06-24 15:34:49 UTC
I can't test any of the 4.0.x or 3.7 releases that I have because Java (JDK or JRE) fails to get detected on OSX 10.11 with these releases, even if I specify a system path.

LO 3.6.7 doesn't show the bug.
Comment 19 Alex Thurgood 2016-06-24 15:37:06 UTC
And LO 4.1.0.0 alpha bombs out for me on launch, just after the old startup dialog gets displayed, so no joy there either.
Comment 20 Caolán McNamara 2016-07-21 11:15:36 UTC
I'll bet this went wrong with

commit 3cad6c806e5247ce20b78eb688551aa5d872b934
Date:   Fri Mar 1 21:47:10 2013 +0100

    Replace (Xub)String with OUString in vcl(field)

in DateField::ImplDateSpinArea
Comment 21 Commit Notification 2016-07-21 11:21:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=82913e694a4169f9ddeef399e659aec78cc9c8d6

Resolves: tdf#100558 last 'section' of date field not incremented

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Caolán McNamara 2016-07-21 11:24:53 UTC
5-2 and 5-1 backports in gerrit
Comment 23 Commit Notification 2016-07-21 15:55:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=836a7634b2042de4f08fcc2296fc33ca2d040a60&h=libreoffice-5-1

Resolves: tdf#100558 last 'section' of date field not incremented

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2016-07-25 07:31:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=87aae2e900da3cc441497c6b1666a143108baf0e&h=libreoffice-5-2

Resolves: tdf#100558 last 'section' of date field not incremented

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.