Resolves: tdf#100558 last 'section' of date field not incremented

presumably a regression from...

commit 3cad6c806e5247ce20b78eb688551aa5d872b934
Author: Chr. Rossmanith <ChrRossmanith@gmx.de>
Date:   Fri Mar 1 21:47:10 2013 +0100

    Replace (Xub)String with OUString in vcl(field)

where UniString::Search returned a max short on not-found
while OUString::indexOf returns a -1

Change-Id: Ia3ef80dd318375ccdb3bdcee9bed7b70bf67cae1